# Messier

./: .gitignore  Makefile  README.md  benchmarks.txt  meson.build
include/engine/: Engine.hpp  Misc.hpp
include/engine/movegen/: Move.hpp  Position.hpp  Types.hpp
include/engine/search/: Evaluate.hpp  Search.hpp  SearchTypes.hpp  Thread.hpp  Transposition.hpp  Worker.hpp
legacy/: Chess.py  EngineAPI.py  EnginePerformanceTest.py  Event.py  Move.py  Utilities.py  logger.py  test.py
lichess-bot/: .gitignore  challenge.py
src/: Engine.cpp  Log.cpp  Makefile  Misc.cpp  engine.cpp  engine.hpp  log.cpp  log.hpp  main.cpp  meson.build  misc.cpp  misc.hpp
src/movegen/: Makefile  move.hpp  position.cpp  position.hpp  tables.cpp  tables.hpp  types.cpp  types.hpp
src/search/: Evaluate.cpp  Makefile  Search.cpp  Thread.cpp  Transposition.cpp  Worker.cpp  evaluate.cpp  evaluate.hpp  movepicker.cpp  movepicker.hpp  search.cpp  search.hpp  tt.cpp  tt.hpp
tmp/: SearchTypes.hpp  UCI.cpp  UCI.hpp  Worker.cpp  Worker.hpp  tmp.txt
