
src = files(
    'movegen/position.cpp',
    'movegen/tables.cpp',
    'movegen/types.cpp',

    'search/evaluate.cpp',
    'search/search.cpp',
    'search/movepicker.cpp',
    'search/tt.cpp',

    'engine.cpp',
    'log.cpp',
    'misc.cpp',
    'main.cpp'
)

messier = executable('messier', sources: src, include_directories: inc)